linked css files and extended layout.html to index.html

--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,4 +1,5 @@
-<title>Job Board</title>
-<link rel="icon" href="https://dotown.maeda-design-room.net/wp-content/uploads/2022/01/food_hamburger_01.png">
+{% extends 'layout.html' %}
 
+{% block content %}
 <h1>Jobs</h1>
+{% endblock %}
